@@ -25,6 +25,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #20311: selector.PollSelector.select() now rounds the timeout away from
+  zero, instead of rounding towards zero. For example, a timeout of one
+  microsecond is now rounded to one millisecond, instead of being rounded to
+  zero.
+
 - Issue #20311: select.epoll.poll() now rounds the timeout away from zero,
   instead of rounding towards zero. For example, a timeout of one microsecond
   is now rounded to one millisecond, instead of being rounded to zero.
